--- a/ListCrown/app/src/main/AndroidManifest.xml
+++ b/ListCrown/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name=".ModifyItemActivity"></activity>
         <activity android:name=".AddItemActivity" />
         <activity android:name=".DisplayMessageActivity" />
-        <receiver android:name=".Notification"></receiver>
+        <receiver android:name=".MyNotification"></receiver>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
